--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,4 @@ MESSAGINGSENDERID="312310772520"
 APPID="1:312310772520:web:f096c2ddac60b4710bd61d"
 MEASUREMENTID="G-R95397MBNV"
 SECRET="GRAGRAE$#%@RGRW#$T#T#T$#$G#"
+MONGOURL="mongodb://localhost:27017/mydatabase"
