--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^12.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.5"
   }
 }
